kubernetes/app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cool-tour-app-deployment
  namespace: cool-tour
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cool-tour-app
  template:
    metadata:
      labels:
        app: cool-tour-app
    spec:
      containers:
        - name: cool-tour
          image: vlade25/cool-tour:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          ports:
            - containerPort: 8080
              protocol: TCP
      volumes:
        - name: init-scripts
          configMap:
            name: init-scripts
