kubernetes/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cool-tour-app-service
  namespace: cool-tour
spec:
  selector:
    app: cool-tour-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
