kubernetes/app/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cool-tour-app-ingress
  namespace: cool-tour
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/service-port: "80"
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: cooltour.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cool-tour-app-service
                port:
                  number: 80
